    error
105.sslerator.c: changed default cert location to /etc/indimail/certs
106.sslerator.c: replace internal TLS function with TLS functions from
    libqmail
107.sslerator.c: added timeouts for connection accept
108.starttls.c: replace set_tls_method() from libqmail
109.starttls.c: made global variables static
110.qmail-greyd.c, qmail-daned.c, udplogger.c: removed __USE_GNU

* Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
Release 3.0.1 Start 21/05/2022 End 08/09/2022
======= Release Highlights ================================================
o added SCRAM authentication SCRAM-SHA-1, SCRAM-SHA-256, SCRAM-SHA-1-PLUS
  SCRAM-SHA-256-plus in qmail-smtpd and qmail-remote
o added CRAM-SHA224, CRAM=SHA-384 authentication methods in qmail-smtpd,
  qmail-remote
o Converted man pages to markdown for indimail wiki
===========================================================================
- 21/05/2022
01.  svctool: redirect envdir error message for missing dir to /dev/null
- 26/05/2022
02.  svctool: fix original value of me getting overwritten by config-fast
- 01/06/2022
03.  dnsbl.c: skip dnsblcheck for loopback addresses
04.  added dnsblcheck program
05.  smtpd.c: clear errno when client drops connection
06.  svctool: replaced dnsbl.njabl.org with zen.spamhaus.org
- 06/06/2022
07.  swaks: updated to version 20201014.0
- 20/06/2022
08. installer.c, svctool: fixes for OSX
- 01/07/2022
09. instcheck.in: common instcheck for daemontools, ucspi-tcp, indimail-mta
- 03/07/2022
10. svctool.in: fixed mysqld startup warnings
11. svctool.in: unmount resolv.conf when svscan is shutdown
- 04/07/2022
12. svctool.in: fixed qmail-smtpd, inlookup service script for Mac OSX
- 21/07/2022
13. svctool.in: fixed error in mysql run script
14. svctool.in: use /tmp/inquery as TMPDIR for courier-imap inlookup
- 26/07/2022
15. smtpd.c: added AUTH CRAM-SHA224, CRAM-SHA384 methods
- 31/07/2022