@@ -195,6 +195,8 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 108.starttls.c: replace set_tls_method() from libqmail
 109.starttls.c: made global variables static
 110.qmail-greyd.c, qmail-daned.c, udplogger.c: removed __USE_GNU
+- 04/02/2023
+111.starttls.c: fixed incorrect setting of smtptext
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
